# POMDPObjectSearch

./: .gitignore  README.md
app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
app/src/androidTest/java/: PolicyReaderTestInstrumental.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/MDPPolicies/: policy_computer_monitor.txt  policy_desk.txt  policy_door.txt  policy_hand_dryer.txt  policy_kettle.txt  policy_laptop.txt  policy_microwave.txt  policy_refrigerator.txt  policy_sink.txt  policy_toilet.txt  policy_window.txt  sarsa_chair.txt  sarsa_computer_keyboard.txt  sarsa_computer_monitor.txt  sarsa_computer_mouse.txt  sarsa_desk.txt  sarsa_door.txt  sarsa_keyboard.txt  sarsa_laptop.txt  sarsa_monitor.txt  sarsa_mouse.txt  sarsa_mug.txt  sarsa_office_supplies.txt  sarsa_policy.txt  sarsa_window.txt
app/src/main/assets/mobilenet/: office_labels_list.txt
app/src/main/assets/models/sven/: blade_mask1.tga  blade_mask2.tga
app/src/main/assets/transitions/: enlarged_objects_probabilities.json
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: jniWrapper.hpp  renderWrapper.hpp
app/src/main/cpp/include/AL/: alext.h
app/src/main/cpp/include/AndroidMDP/: PolicyInterface.hpp  Types.hpp
app/src/main/cpp/include/AndroidMDP/MDP/: SparseModel.hpp  Types.hpp  Util.hpp
app/src/main/cpp/include/AndroidMDP/MDP/Algorithms/: ValueIteration.hpp
app/src/main/cpp/include/AndroidMDP/MDP/Policies/: Policy.hpp  PolicyInterface.hpp
app/src/main/cpp/include/AndroidMDP/Util/: Core.hpp  Logging.hpp  Probability.hpp  Seed.hpp
app/src/main/cpp/include/GLRenderer/: GLShaders.hpp  GLUtils.hpp  Renderer.hpp  RendererContext.hpp  RendererYUV420.hpp
app/src/main/cpp/include/MDP/: mdp.hpp  model.hpp
app/src/main/cpp/include/ObjectDetector/: Helper.hpp  ObjectDetector.hpp
app/src/main/cpp/include/SoundGenerator/: SoundGenerator.hpp
app/src/main/cpp/src/: jniWrapper.cpp  renderWrapper.cpp
app/src/main/cpp/src/AndroidMDP/MDP/: SparseModel.cpp  Util.cpp
app/src/main/cpp/src/AndroidMDP/MDP/Algorithms/: ValueIteration.cpp
app/src/main/cpp/src/AndroidMDP/MDP/Policies/: Policy.cpp
app/src/main/cpp/src/AndroidMDP/Util/: Seed.cpp
app/src/main/cpp/src/GLRenderer/: GLUtils.cpp  Renderer.cpp  RendererContext.cpp  RendererYUV420.cpp
app/src/main/cpp/src/MDP/: mdp.cpp  model.cpp
app/src/main/cpp/src/ObjectDetector/: Helper.cpp  ObjectDetector.cpp  Yolo.cpp  YoloJNI.cpp  YoloJNI.h
app/src/main/cpp/src/SoundGenerator/: SoundGenerator.cpp
app/src/main/java/com/example/jaycee/pomdpobjectsearch/: ARObject.java  ActionGenerator.java  ActivityBase.java  ActivityCamera.java  ActivityCamera.kt  ActivityCameraBase.java  ActivityEntry.java  ActivityGuidance.java  ActivityGuided.java  ActivityUnguided.java  App.java  Arrow.java  BarcodeListener.java  BarcodeScanner.java  BoundingBoxView.java  CameraSurface.java  CentreView.java  ClassHelpers.java  ClassMetrics.java  ClassRendererBackground.java  ClassShaderUtil.java  Classifier.java  Frame.java  FrameHandler.java  FrameScanner.java  HandlerMDPIntentService.java  IntentServiceMDP.java  JNIBridge.java  Metrics.java  MyGLSurfaceView.java  NewFrameHandler.java  NewWaypointHandler.java  ObjectClassifier.java  ObjectDetector.java  Objects.java  Recognition.java  RenderListener.java  RunnableSoundGenerator.java  ScreenReadRequest.java  SnackbarHelper.java  (+6 more)
app/src/main/java/com/example/jaycee/pomdpobjectsearch/deprecated/: BarcodeScanner.java  SoundGenerator.java
app/src/main/java/com/example/jaycee/pomdpobjectsearch/helpers/: BorderedText.java  CameraPermissionHelper.java  ClassHelpers.java  ImageConverter.java  ImageUtils.java  Logger.java  PermissionHelper.java  Size.java  SnackbarHelper.java  TGAReaderHelper.java  VectorTools.java
app/src/main/kotlin/: ActivityCamera.kt  JNIBridge.kt
app/src/main/res/drawable/: borders.xml
app/src/main/res/layout/: activity_base.xml  activity_camera.xml  activity_entry.xml  centre_layout.xml
app/src/main/res/menu/: menu_objects.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/: PolicyReaderTest.java
wifi_tools/: .pySock.py.swp  pySock.py
(+38 files in other folders)
